test/classes/initializers/compilerGenerated/pragmaOnly/definesCtor.good
definesCtor.chpl:6: error: cannot apply 'use default init' to type 'Foo', it defines a constructor here
