test/classes/initializers/compilerGenerated/pragmaOnly/definesCtor.compopts
 # definesCtor.good
--force-initializers
--no-force-initializers
